--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
         <link rel="stylesheet" type="text/css" href="style/css/general.css">
         <link rel="stylesheet" type="text/css" href="style/css/icons.css">
     </head>
