--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 
     <head>
-        <meta charset = "UTF-8">
-        <title>React App</title>
+        <meta charset="UTF-8">
+        <title>CS Planner</title>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
@@ -15,8 +15,8 @@
     </head>
 
     <body>
-        <div id = "app"></div>
-        <script src = "index.js"></script>
+        <div id="app"></div>
+        <script src="index.js"></script>
     </body>
 
 </html>
